# scrape

./: .gitignore  README.md  cli.py  core.py  data.py  models.py  pyproject.toml
.github/workflows/: ci.yml
github/: __init__.py  topic.py
sources/: data.py
sources/github/: __init__.py  topic.py
sources/github/tests/: test_topic.py
